--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,11 +1,3 @@
-# Introduction
- 
-Welcome to Nextra! This is a basic docs template. You can use it as a starting point for your own project :)
+# React Native Developer Roadmap
 
-## What is Nextra?
-
-A **simple**, **powerful** and **flexible** site generation framework with everything you love from Next.js.
-
-## Documentation
-
-The documentation is available at [https://nextra.site](https://nextra.site).
+This roadmap is designed to help developers familiarize themselves with the key concepts and tools used in React Native development. Whether you are new to mobile development or have experience with React, this roadmap will guide you through the learning process.
