--- a/pages/stage_1/installation.mdx
+++ b/pages/stage_1/installation.mdx
@@ -1,3 +1,10 @@
-- text editor (IDE) - Visual Studio Code
-- node
-- package manager :npm and yarn
+- **Installation**
+
+  1. **Text Editor** - The first thing you need is a text editor to write your code. You can use any text editor of your choice, but some popular options include Visual Studio Code, Sublime Text, and Atom. You can download and install any of these text editors for free from their respective websites.
+
+     [Visual Studio Code Download and Configuration](https://code.visualstudio.com/)
+
+  2. **Web Browser** - You also need a web browser to preview and test your web pages. Google Chrome, Firefox, and Microsoft Edge are popular choices, but you can use any web browser that you prefer. You can download and install any of these web browsers for free from their respective websites.
+  3. **Node.js** - Node.js is a JavaScript runtime that allows you to run JavaScript on your computer. It is required for running JavaScript applications on the server and for using many popular development tools. You can download and install Node.js for free from the Node.js website.
+
+     [Download | Node.js](https://nodejs.org/en/download/)
